Paused tours  were causing problems with consuming large amount of
	cycles. This seems to be fixed now.

time variables  In the XML files, one can specify that a variable can
	be used as a time variable using an attribute time.  The value
	of the attribute should be "yes" or "true".  (No upper case!)
	Such variables can then be identified when creating a time
	series plot.
	

statusbar is now non-editable by the user.

parcoords_new and tsplot_new become *_with_vars
and the original versions  take an exta argument
 - displayd.

windowDisplayd has an field that allows the constructor to 
specify that we don't want a window. The creation
code then honors this and leaves the display to be managed
by the creator.

scatmat_new now takes a display argument and has changes to allow the
lack of a window. Pass NULL for the display argument and it will
create the basic display.


Added --home as an argument for ggobi and ggobi-config to compute
the location of the "installed" GGobi files.

GGobi home directory displayed on the spash screen

Configuration now supports --enable-local.



Getting the names of the data modes (getDataModeNames) now computes
these from the plugins by querying them dynamically. The caller should
free the resulting array of strings, but not the strings themselves.
The return type of the routine no longer refers to a constant array.

Added CSV to the DataModeNames since the enums and this list were out of synch.
This should be removed very soon.

Changed the order of initialization so that default plugins (input
plugins) are done in ggobiInit() as is the initialization of the
session options (initSessionOptions).

Fixed the error in addVariableInternal which made all variables categorical.
Switch on the number of levels.

Moved from built-in data formats/modes to extensible plugins and a
uniform framework. Each plugin lists its set of supported mode names.
Implications for Rggobi.



Read Excel files directly via --datamode=excel and