@@ -62,6 +62,9 @@ static const GtkItemFactoryEntry menu_items[] = {
    NULL,
    0,
    "<Separator>"},
+  {"/File/Control Panel",   "",      
+    (GtkItemFactoryCallback) show_display_control_panel_cb,
+   0, "<Item>" },
   {"/File/Close",
    "",
    (GtkItemFactoryCallback) display_close_cb,
