@@ -8,10 +8,12 @@
 #define NCOLS_CLIST_CAT 11
 #endif
 
-enum {REAL_CLIST_VARNO, REAL_CLIST_VARNAME, REAL_CLIST_TFORM,
+enum {REAL_CLIST_VARNO, 
+      REAL_CLIST_VARNAME, REAL_CLIST_TFORM,
       REAL_CLIST_USER_MIN, REAL_CLIST_USER_MAX,
       REAL_CLIST_DATA_MIN, REAL_CLIST_DATA_MAX,
-      REAL_CLIST_MEAN, REAL_CLIST_MEDIAN, REAL_CLIST_NMISSING,
+      REAL_CLIST_MEAN, REAL_CLIST_MEDIAN, 
+      REAL_CLIST_NMISSING,
       NCOLS_CLIST_REAL};
 
 enum {CAT_CLIST_VARNO, CAT_CLIST_VARNAME, CAT_CLIST_NLEVELS,
